# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./posts";
 export * from "./comments";
 export * from "./likes";
 export * from "./notifications";
+export * from "./messages";
